# X-KANeRF

./: .gitignore  README.md  get_params_from_ckpt.py  pyproject.toml  run_eval.sh  run_render.sh  run_train.sh  train_360.sh  train_blender.sh
KANeRF/: kanerf_field.py  sh_kan.py
KANeRF/kan_models/: grbf_kan.py
docs/: Theorem.md
scripts/: get_params_from_ckpt.py  run.sh  train_360.sh
submodules/FourierKAN-mnist/: README.md  mnist.py
xKANeRF/: kanerf.py  kanerf_config.py  kanerf_field.py
xKANeRF/xKAN/: __init__.py  bessel_kan.py  bspine_kan.py  chebyshev2_kan.py  chebyshev_kan.py  fcn_kan.py  fibonacci_kan.py  fourier_kan.py  gegenbauer_kan.py  grbf_kan.py  hermite_kan.py  jacobi_kan.py  laguerre_kan.py  legendre_kan.py  lucas_kan.py  nerfacto_mlp.py  rbf_kan.py  wav_kan.py
